<resources>
    <string name="app_name">FS Playground</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_button">Log In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_in_fb_button">Facebook Login</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="forget_password_button">Forget Password</string>
    <string name="email_name_message">Email or name</string>
    <string name="password_message">Password</string>
</resources>
